# ultimate-plotter

./: .gitignore  LICENSE  README.md  example.csv  pedestrian_density.csv  pyproject.toml
ultimate_plotter.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
utp/: __init__.py  __main__.py  auto_scale.py  cli.py  data_loader.py  style.py
utp/charts/: __init__.py  area.py  bar.py  base.py  box.py  heatmap.py  hist.py  line.py  scatter.py  violin.py
